# Asterisk

./: README.md  README_CN.md  README_EN.md  TASK_HANDOFF.md  docs_asterisk2_benchmark.md  mpc_10_chain_mul.sh
benchmark/: CMakeLists.txt  Darkpool_CDA.cpp  Darkpool_VM.cpp  assistedmpc_offline.cpp  asterisk2_bgtez.cpp  asterisk2_core_ops_check.cpp  asterisk2_darkpool_cda.cpp  asterisk2_darkpool_vm.cpp  asterisk2_eqz.cpp  asterisk2_fixedpoint_mul_check.cpp  asterisk2_mpc.cpp  asterisk2_mul_check.cpp  asterisk_mpc.cpp  asterisk_offline.cpp  asterisk_online.cpp  utils.cpp
docs/: asterisk2_malicious_implementation_plan.md
scripts/: check_cda_a2.sh  check_compare_a2.sh  check_eqz_a2.sh  check_mul_a2.sh  check_vm_a2.sh  compare_cda_protocols.sh  compare_cmp_protocols.sh  compare_eqz_a2.sh  compare_fixedpoint_mul_a2.sh  compare_mul_protocols.sh  compare_truncation_a2.sh  compare_vm_protocols.sh  lib_localhost_runner.sh  run_cda_tc.sh  run_comparison_tc.sh  run_eqz_paper_grid.sh  run_eqz_tc.sh  run_fixedpoint_mul_tc.sh  run_table3_tc.sh  run_truncation_paper_grid.sh  run_truncation_tc.sh  run_truncation_tc_matrix.sh  run_vm_paper_grid.sh  run_vm_tc.sh  verify_asterisk2_mul.py
src/: CMakeLists.txt
src/Asterisk2.0/: app_evaluator.cpp  app_evaluator.h  key_manager.cpp  key_manager.h  mac_setup.cpp  mac_setup.h  protocol.cpp  protocol.h
src/utils/: darkpool.h  types.h
test/: CMakeLists.txt  assistedMPC_offline.cpp  asterisk2_bgtez.cpp  asterisk2_key_manager.cpp  asterisk2_mac_setup_dh.cpp  asterisk2_multiplication.cpp  asterisk2_truncation.cpp  offline.cpp  online.cpp  (+1 more)
